--- a/mawse_engine/mawse_engine.vcxproj
+++ b/mawse_engine/mawse_engine.vcxproj
@@ -71,12 +71,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\llama\OneDrive\Documents\SDL2-2.30.11\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\llama\OneDrive\Documents\SDL2-2.30.11\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>F:\SDL2-2.32.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>F:\SDL2-2.32.0\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Users\llama\OneDrive\Documents\SDL2-2.30.11\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\llama\OneDrive\Documents\SDL2-2.30.11\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>F:\SDL2-2.32.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>F:\SDL2-2.32.0\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
